--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
 
-    implementation fileTree(dir: 'deps', include: '*.jar')
+    implementation fileTree(dir: 'deps', include: 'jfreechart-2.0.0.jar')
 }
 
 
