--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     implementation fileTree(dir: 'deps/ejml-v0.42-libs')
 }
 
+// gradle.projectsEvaluated {
+//     tasks.withType(JavaCompile) {
+//         options.compilerArgs << "-Xlint:unchecked"
+//     }
+// }
 
 application {
     // Define the main class for the application.
